2001-03-13  Chema Celorio  <chema@celorio.com>

	* capplets/gnome-edit-properties/gnome-edit-properties.c:
	s/gEdit/gedit

2001-01-29  Fatih Demir	<kabalak@gmx.net>

	* idl/.cvsignore & libcapplet/.cvsignore: Added these
		files.

2001-01-27  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-background-properties/applier.c
	(applier_apply_prefs): Disable wallpaper in new_prefs structure,
	not structure passed to function

2001-01-26  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-background-properties/main.c
	(do_restore_from_defaults): Implement. Creates a preferences
	object with factory defaults and saves and applies those changes.

2001-01-26  Marius Andreiana  <mandreiana@yahoo.com>

	* *.desktop, *.directory : Added ro (Romanian) translation
	
2001-01-25  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in ([BG_]CAPPLET_{CFLAGS|LIBS}): Add ximian_archiver

	* capplets/new-background-properties/main.c (store_archive_data):
	Implement
	(ok_cb): Call store_archive_data

2001-01-25  jacob berkman  <jacob@ximian.com>

	* root-manager/root-manager.c (main): add a \n to the usage
	message

	* root-manager/root-manager-wrap.c: change some g_print's to
	fprintf to stderr

2001-01-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-background-properties/preferences.c
	(preferences_read_xml): Fix typo in adjust-opacity part

	* capplets/new-background-properties/main.c (do_set_xml): Apply
	preferences as well as saving them

2001-01-24  jacob berkman  <jacob@ximian.com>

	* new-control-center/*.[ch]: new (temporary) html view and bug
	fixication
	
	* root-manager/*.[ch]: gnomeify dialogs and other cleanups

	* configure.in: flags for root-manager-helper

2001-01-17  jacob berkman  <jacob@ximian.com>

	* root-manager/Makefile.am
	* root-manager/root-manager.h: fix finding the root-manager

2001-01-24  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Added ROLLBACK_CAPPLET_{CFLAGS|LIBS} for the
	rollback capplet