@@ -1,3 +1,8 @@
+2001-03-15  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplets/new-*/main.c: Added code to store archive data with the
+	ximian archiver
+
 2001-03-13  Chema Celorio  <chema@celorio.com>
 
 	* capplets/gnome-edit-properties/gnome-edit-properties.c:
